# offscreen

./: .gitignore  CMakeLists.txt  OffscreenRenderer.cpp  OffscreenRenderer.h  README.md  main.cpp  qnx_aarch64le.cmake
resources/: main.qml  resources.qrc
